infra/templates/argocd-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-http
  namespace: argocd
spec:
  gateways:
    - istio-system/main
  hosts:
    - argocd.home.lab
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server
            port:
              number: 443
